<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FieldDataCheck</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_activity_show_result_list">节点数据最后接收时间</string>
    <string name="title_node">项目内节点编号</string>
    <string name="title_sensor_id">设备编号</string>
    <string name="title_update_time">更新时间</string>
    <string name="title_last_time">最后的数据接收时间</string>
    <string name="label_activity_login_dialog">登陆</string>
    <string name="title">登陆</string>
    <string name="user_name">用户姓名</string>
    <string name="user_password">权限密码</string>
    <string name="login">登陆</string>
    <string name="login_offline">离线登陆</string>
    <string name="maxLength">字母数字（长度16）</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="remember_password">记住密码</string>
    <string name="not_empty_username_password">用户名和密码不能为空！</string>
    <string name="invalid_username_password">用户名和密码错误！</string>
    <string name="get_last_time">得到最后的数据接收时间</string>
    <string name="menu_change_user">更改用户</string>
    <string name="menu_about">关于程序</string>
    <string name="menu_exit">退出程序</string>
    <string name="about_author">关于作者</string>
    <string name="author_info"><i>作者： 宋东泽</i>         \n
        \n <i>联系： songdongze1990@gmail.com</i>         \n
        \n <b>有任何建议或者反馈可以随时联系作者</b></string>
    <string name="menu_logout">注销用户</string>
    <string name="get_last_data">得到某节点的最新数据</string>
    <string name="title_activity_show_last_data">最近一条数据</string>
    <string name="nodata">没有数据！</string>
    <string name="title_activity_show_sensor_meta_data">传感器元数据</string>
    <string name="title_activity_show_sensor_meta_data_list">ShowSensorMetaDataListActivity</string>

</resources>
